--- a/src/components/events/index.css
+++ b/src/components/events/index.css
@@ -10,6 +10,11 @@
   background-color: white;
 }
 
+.rbc-today {
+  background-color: #d9b761;
+  color: white;
+}
+
 .rbc-header:first-child {
   border-top-left-radius: 1rem; /* Rounds top-left corner */
 }
@@ -31,7 +36,7 @@
 }
 
 .rbc-button-link {
-  display: none;
+  font-size: 20px;
 }
 
 .rbc-event-content {
@@ -51,4 +56,8 @@
 
 .rbc-row-segment {
   margin-top: 0.5rem;
+}
+
+.rbc-day-bg {
+  overflow-y: visible;
 }
